--- a/www/css/main.css
+++ b/www/css/main.css
@@ -2,55 +2,69 @@
 /*styles*/
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 a.dashed:visited {
-    color:#0053E4;
+  color:#0053E4;
 }
 a.dashed:link, a.dashed:active, a.dashed:visited, a.dashed:hover {
-    border-bottom:1px dashed;
-    text-decoration:none;
+  border-bottom:1px dashed;
+  text-decoration:none;
 }
-
+.disabled {
+  opacity:0.5;
+}
+.button {
+  margin-left:5px;
+  background:#0053E4 none repeat scroll 0 0;
+  border-color:#0071F3 #003798 #003798 #0071F3;
+  border-style:solid;
+  border-width:1px;
+  color:#FFFFFF;
+  cursor:pointer;
+  font-weight:bold;
+  text-transform:lowercase;
+}
 /*layout*/
 
 #header{
-    height:60px;
+  height:60px;
 }
 
 #logo{
-    width:150px;
-    float:left;
+  width:150px;
+  float:left;
 }
 #site_menu{
-    float:left;
+  float:left;
 }
 #site_menu li{
-    display:inline;
+  display:inline;
 }
 
 #left_layout{
-    float:left;
-    width:200px;
-    height:600px;
+  float:left;
+  width:200px;
+  height:600px;
 }
 
 #right_layout{
-    float:left;
-    width:800px;
+  float:left;
+  width:800px;
 }
 
 #footer{
-    clear:both;
+  clear:both;
 }
 
 #map{
-    width: 100%;
-    height: 500px;
+  width: 100%;
+  height: 500px;
+  overflow: hidden; position: relative;
 }
 #map_canvas{
-    width: 100%;
-    height: 500px;
-    float:left;
+  width: 100%;
+  height: 500px;
+  float:left;
 }
