--- a/www/css/main.css
+++ b/www/css/main.css
@@ -31,7 +31,7 @@ a.editItem:hover {
   margin-bottom:-4px;
 }
 .disabled {
-  opacity:0.5;  
+  opacity:0.5;
 }
 .button {
   margin-left:5px;
@@ -85,4 +85,46 @@ a.editItem:hover {
   width: 100%;
   height: 500px;
   float:left;
+}
+.loc_discr{
+  font-family:Tahoma;
+  font-size:8.5px;
+  min-height:60px;
+  max-height:60px;
+  height:auto !important;
+  width: 200px;
+  border-bottom:#CCCCCC 1px solid;
+}
+.loc_name{
+  font-family:Tahoma;
+  font-size:12px;
+  font-weight:800;
+}
+.comments{
+  float:right;
+  background:url(../images/comment.png) left top no-repeat;
+  padding-left:18px;
+  margin-top: 3px;
+}
+.comments_count{
+  font-family:Tahoma;
+  font-size:9px;
+  vertical-align:middle;
+}
+.rating{
+  float:right;
+  font-family:Tahoma;
+  font-size:9px;
+  clear:right;
+}
+.export{
+  margin-top: 3px;
+  font-family:Tahoma;
+  font-size:9px;
+  float:left;
+  text-decoration:none;
+}
+.bottom {
+  margin-bottom: 10px;
+  font-size:10px;
 }
