--- a/www/css/main.css
+++ b/www/css/main.css
@@ -59,7 +59,17 @@ a.delItem{
   font-weight:bold;
   text-transform:lowercase;
 }
-
+.markerOverName {
+  position: absolute;
+  padding: 5px;
+  background-color: black;
+  border-color:#0071F3 #003798 #003798 #0071F3;
+  border-style: solid;
+  border-width: 1px;
+  color: white;
+  overflow:auto;
+  white-space: nowrap;
+}
 /*layout*/
 
 #header{
