--- a/www/css/main.css
+++ b/www/css/main.css
@@ -2,155 +2,239 @@
 /*styles*/
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
+body {
+    font:100% verdana,sans-serif;
+}
+
 a.dashed:visited {
-  color:#0053E4;
+    color:#0053E4;
 }
 a.dashed:link, a.dashed:active, a.dashed:visited, a.dashed:hover {
-  border-bottom:1px dashed;
-  text-decoration:none;
+    border-bottom:1px dashed #0053E4;
+    text-decoration:none;
 }
 
 a.editItem:visited {
-  color:#0053E4;
+    color:#0053E4;
 }
 a.editItem:link, a.editItem:active, a.editItem:visited {
-  border:0px;
-  background-color:black;
-  text-decoration:none;
-  margin-left:5px;
+    border:0px;
+    background-color:black;
+    text-decoration:none;
+    margin-left:5px;
 }
 a.editItem:hover {
-  background-color:white;
+    background-color:white;
 }
 a.delItem{
-  background-color:#222222
+    background-color:#222222
 }
 .mapIcon {
-  border:0px;
-  margin-bottom:-4px;
-  margin-left: 5px;
+    border:0px;
+    margin-bottom:-4px;
+    margin-left: 5px;
 }
 .mapOverLay {
-  position: absolute;
-  padding: 5px 5px 5px 0px;
-  background-color: black;
-  color: white;
-  overflow:auto;
+    position: absolute;
+    padding: 5px 5px 5px 0px;
+    background-color: black;
+    color: white;
+    overflow:auto;
 }
 .mapList {
-  margin:5px 5px 5px 20px;
-  color:#0053E4;
-  cursor:pointer;
+    margin:5px 5px 5px 20px;
+    color:#0053E4;
+    cursor:pointer;
 }
 .disabled {
-  opacity:0.5;
+    opacity:0.5;
 }
 .button {
-  margin-left:5px;
-  background:#0053E4 none repeat scroll 0 0;
-  border-color:#0071F3 #003798 #003798 #0071F3;
-  border-style:solid;
-  border-width:1px;
-  color:#FFFFFF;
-  cursor:pointer;
-  font-weight:bold;
-  text-transform:lowercase;
+    margin-left:5px;
+    background:#0053E4 none repeat scroll 0 0;
+    border-color:#0071F3 #003798 #003798 #0071F3;
+    border-style:solid;
+    border-width:1px;
+    color:#FFFFFF;
+    cursor:pointer;
+    font-weight:bold;
+    text-transform:lowercase;
 }
 .markerOverName {
-  position: absolute;
-  padding: 5px;
-  background-color: black;
-  border-color:#0071F3 #003798 #003798 #0071F3;
-  border-style: solid;
-  border-width: 1px;
-  color: white;
-  overflow:auto;
-  white-space: nowrap;
+    position: absolute;
+    padding: 5px;
+    background-color: black;
+    border-color:#0071F3 #003798 #003798 #0071F3;
+    border-style: solid;
+    border-width: 1px;
+    color: white;
+    overflow:auto;
+    white-space: nowrap;
 }
 /*layout*/
 
 #header{
-  height:60px;
+    height:60px;
 }
 
 #logo{
-  width:150px;
-  float:left;
+    width:150px;
+    float:left;
 }
 #site_menu{
-  float:left;
+    float:left;
 }
 #site_menu li{
-  display:inline;
+    display:inline;
 }
 
 #left_layout{
-  float:left;
-  width:200px;
-  height:600px;
+    float:left;
+    width:200px;
+    height:600px;
 }
 
 #right_layout{
-  float:left;
-  width:800px;
+    float:left;
+    width:800px;
 }
 
 #footer{
-  clear:both;
+    clear:both;
 }
 
 #map{
-  width: 100%;
-  height: 500px;
-  overflow: hidden; position: relative;
+    width: 100%;
+    height: 500px;
+    overflow: hidden; position: relative;
 }
 #map_canvas{
-  width: 100%;
-  height: 500px;
-  float:left;
+    width: 100%;
+    height: 500px;
+    float:left;
 }
+
+.tabPanel{
+    border-bottom:1px solid #0053E4;
+}
+.tabPanel ul{
+    list-style-type: none;
+}
+.tabPanel ul li{
+    display: inline;
+}
+.tabPanel ul li span{
+    text-decoration: none;
+    padding: 0 1em;
+    border-top:1px solid #0053E4;
+    border-left:1px solid #0053E4;
+    border-right:1px solid #0053E4;
+}
+
+.tabPanel ul li span:hover{
+    color: #fff;
+    background-color: #369;
+}
+.selected {
+    border-bottom:1px solid #fff;
+}
+
+.comment_bar {
+    color:#666666;
+    font-size:0.8em;
+    line-height:140%;
+    position:relative;
+    width:100%;
+}
+.comment_bar #newComment{
+    margin-left: 30px;
+    margin-top: 2em;
+}
+
+.comment  {
+    padding-bottom:3em;
+}
+
+.tree {
+    margin-left:245px;
+}
+
+.commentMessage {
+    padding:5px 5px 0.5em;
+    position:relative;
+}
+
+.indent_8 {
+    margin-left:245px;
+}
+.indent_7 {
+    margin-left:215px;
+}
+.indent_6 {
+    margin-left:185px;
+}
+.indent_5 {
+    margin-left:155px;
+}
+.indent_4 {
+    margin-left:125px;
+}
+.indent_3 {
+    margin-left:95px;
+}
+.indent_2 {
+    margin-left:65px;
+}
+.indent_1 {
+    margin-left:35px;
+}
+.indent_0 {
+    margin-left:5px;
+}
+
+
 .loc_discr{
-  font-family:Tahoma;
-  font-size:8.5px;
-  min-height:60px;
-  max-height:60px;
-  height:auto !important;
-  width: 200px;
-  border-bottom:#CCCCCC 1px solid;
+    font-family:Tahoma;
+    font-size:8.5px;
+    min-height:60px;
+    max-height:60px;
+    height:auto !important;
+    width: 200px;
+    border-bottom:#CCCCCC 1px solid;
 }
 .loc_name{
-  font-family:Tahoma;
-  font-size:12px;
-  font-weight:800;
+    font-family:Tahoma;
+    font-size:12px;
+    font-weight:800;
 }
 .comments{
-  float:right;
-  background:url(../images/comment.png) left top no-repeat;
-  padding-left:18px;
-  margin-top: 3px;
+    float:right;
+    background:url(../images/comment.png) left top no-repeat;
+    padding-left:18px;
+    margin-top: 3px;
 }
 .comments_count{
-  font-family:Tahoma;
-  font-size:9px;
-  vertical-align:middle;
+    font-family:Tahoma;
+    font-size:9px;
+    vertical-align:middle;
 }
 .rating{
-  float:right;
-  font-family:Tahoma;
-  font-size:9px;
-  clear:right;
+    float:right;
+    font-family:Tahoma;
+    font-size:9px;
+    clear:right;
 }
 .export{
-  margin-top: 3px;
-  font-family:Tahoma;
-  font-size:9px;
-  float:left;
-  text-decoration:none;
+    margin-top: 3px;
+    font-family:Tahoma;
+    font-size:9px;
+    float:left;
+    text-decoration:none;
 }
 .bottom {
-  margin-bottom: 10px;
-  font-size:10px;
+    margin-bottom: 10px;
+    font-size:10px;
 }
