--- a/www/css/comment.css
+++ b/www/css/comment.css
@@ -1,13 +1,18 @@
-.commentBar {
+.comment .commentBar {
     color:#666666;
     font-size:0.8em;
     line-height:140%;
     position:relative;
     width:100%;
 }
-.commentBar #newComment{
+.comment .commentBar #newComment{
     margin-left: 30px;
     margin-top: 2em;
+}
+
+.comment .commentBar .rating{
+    font-size: 1em;
+    font-weight: bold;
 }
 
 .comment  {
