brief provit vote default type

--- a/www/css/comment.css
+++ b/www/css/comment.css
@@ -28,7 +28,7 @@
     border: 1px solid red;
 }
 
-.commentMessage {
+.comment .commentMessage {
     padding:5px 5px 0.5em;
     position:relative;
 }
