section to talk show

--- a/www/css/talk.css
+++ b/www/css/talk.css
@@ -1,5 +1,12 @@
+
 .sectionMenu ul {
     list-style:none outside none;
+}
+.sectionMenuShow ul{
+    list-style:none outside none;
+}
+.sectionMenuShow ul li{
+    display:inline;
 }
 .section {
     margin-left:30px;
