--- a/www/css/photoUpload.css
+++ b/www/css/photoUpload.css
@@ -13,3 +13,17 @@
     height:100%;
     width:0;
 }
+
+#buttonPlaceholder {
+    display: inline;
+    border: 1px solid rgb(127, 170, 255);
+    background-color: rgb(197, 217, 255);
+    padding: 2px
+}
+
+#uploadButton {
+    display: inline;
+    border: 1px solid rgb(127, 170, 255);
+    background-color: rgb(197, 217, 255);
+    padding: 2px
+}
