profile form done

--- a/www/css/form.css
+++ b/www/css/form.css
@@ -1,3 +1,48 @@
 .labeled {
- color: darkgray;
+    color: darkgray;
+}
+.customFile {
+    position: relative;
+    width: 219px;
+    margin-left: -140px;
+    cursor: default;
+    height: 21px;
+    z-index: 2;
+    filter: alpha(opacity:0);
+    opacity: 0;
+    cursor: pointer;
+}
+.fakeButton {
+    position: absolute;
+    z-index: 1;
+    width: 85px;
+    height: 21px;
+    background: url(/images/form/button.png) no-repeat left top;
+    float: left;
+    font-size: 10pt;
+    padding: 2px 0 0 10px;
+    margin-top:-20px;
+    cursor: pointer;
+}
+.fakeButton.active {
+    background: url(/images/form/button_active.png) no-repeat left top;
+}
+
+.blocker {
+    position: absolute;
+    z-index: 3;
+    width: 150px;
+    height: 21px;
+    background: url(/images/form/transparent.gif);
+    margin-left: -155px;
+}
+.fileName {
+    position: absolute;
+    height: 15px;
+    margin: 2px 0 0px 90px;
+    font-family: Verdana;
+    font-size: 8pt;
+    color: Gray;
+    padding: 1px 0 0 19px;
+    margin-top:-20px;    
 }
