fixed inboxes and comments task

--- a/www/css/inbox.css
+++ b/www/css/inbox.css
@@ -19,6 +19,11 @@
     float: left;
     width: 80%;
 }
+
+#inbox div.qweqwe {
+    padding: 5px 0 5px 20px;    
+}
+
 #inboxControl{
     border: 1px solid #eee;
     float: left;
