--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,14 +1,6 @@
 @charset "utf-8";
 /*styles*/
 
-* {
-    margin: 0;
-    padding: 0;
-}
-body {
-    font:100% verdana,sans-serif;
-}
-
 a.dashed:visited {
     color:#0053E4;
 }
@@ -74,62 +66,38 @@ a.delItem{
     overflow:auto;
     white-space: nowrap;
 }
+body{
+    background-color: #EFEFEF;
+}
 /*layout*/
-
-#page {
-    /*    background-color: gainsboro;*/
-}
-#header{
-
-}
-#footer{
-    clear:both;
-    text-align: center;
-}
-#header, #footer{
-    min-width:998px;
-    background-color: lavender;
-}
-#logo{
-    position: absolute;
-    padding-top: 10px;
-    padding-left: 20px;
-}
-#logo a img{
-    border:0;
-}
-#site_menu{
-    position: relative;
-    height: 8em;
-    margin-left: 140px;
-}
-#site_menu ul{
-    padding: 6em 0 0 6em;
-}
-#site_menu li{
-    background-color: #eee;
-    display:inline;
+#middle{
+    padding-bottom: 20px;
 }
 #left_layout{
     float:left;
-    width: 20%
+    width: 20%;
+    padding: 5px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    background-color: white;
+    border: 1px solid #DFDFDF;
 }
 
 #right_layout{
-    float:left;
-    width: 80%
+    float:right;
+    width: 77%;
+    padding: 5px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    background-color: white;
+    border: 1px solid #DFDFDF;
 }
-#middle  {
-    clear:both;
-
-}
-#middle {
+.content{
+    width: 1000px;
     margin:0 auto;
-    max-width:1620px;
-    min-width:980px;
-    width:90%;
 }
-
 
 #map{
     width: 100%;
