--- a/www/css/menu.css
+++ b/www/css/menu.css
@@ -74,7 +74,7 @@
     border-radius:0 8px 8px 0;
 }
 
-#main_menu li.last img
+#main_menu li img
 {
     display: inline;
 }
@@ -82,7 +82,7 @@
 /*user menu*/
 #user_menu {
     margin: -5px -5px 0 -5px
-    /*    border-right: 1px solid #DFDFDF;*/
+        /*    border-right: 1px solid #DFDFDF;*/
 }
 #user_menu li:first-child, #user_menu li:first-child a, #user_menu li:first-child a span.label {
     -moz-border-radius:8px 8px 0 0;
@@ -92,7 +92,7 @@
 #user_menu li.selected a,
 #user_menu li a:hover
 {
-    background:#d1d1d1 url(../images/common/backgrounds/bg_submenu.gif) repeat-x 0 0;
+    background:#d1d1d1 url(/images/common/backgrounds/bg_submenu.gif) repeat-x 0 0;
 }
 
 #user_menu li {
@@ -106,13 +106,13 @@
     color: #404040;
     cursor: pointer;
     display: block;
-    font-size: 13px;
+    font-size: 11px;
     text-decoration: none;
     text-transform: uppercase;
 }
 #user_menu li a span.label {
     display: block;
-    min-height: 24px;
+    min-height: 22px;
     padding: 20px 20px 16px 65px;
 }
 #user_menu li a span.icon {
@@ -120,7 +120,7 @@
     left: 0;
     position: absolute;
     text-align: center;
-    top: 12px;
+    top: 10px;
     width: 60px;
 }
 strong {
@@ -132,7 +132,7 @@ strong {
     padding: 0;
     position: absolute;
     right: 10px;
-    top: 20px;
+    top: 18px;
 }
 #user_menu span.count span {
     -moz-border-radius: 6px 6px 6px 6px;
@@ -143,3 +143,29 @@ strong {
     margin-right: 2px;
     padding: 4px;
 }
+
+.menu_block{
+    font-size: 70%;
+    padding-top: 20px;
+}
+.menu_block li{
+ padding-top: 10px;   
+}
+.menu_block h4{
+    color: #759E1A;
+    font-size: 16px;    
+    padding-bottom: 5px;
+    text-transform: uppercase;
+}
+.menu_block h5{
+     font-size: 14px;
+}
+.menu_block img.userpic{
+    width: 24px;
+    height: 24px;
+}
+.menu_block .createdBy{
+    padding-left: 5px;
+    text-align: right;
+}
+
