--- a/www/css/form.css
+++ b/www/css/form.css
@@ -1,3 +1,35 @@
+input,textarea {
+    -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius:3px 3px 3px 3px;
+    border-radius:3px 3px 3px 3px;
+    background: url("../images/gravatar-vertical-sprite.png") repeat-x scroll 0 -150px transparent;
+    border: 1px solid #BBBBBB;
+    font-family: Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    line-height: 1em;
+    min-width: 300px;
+    padding: 5px 7px;
+}
+textarea {
+    min-height: 300px;
+}
+input:hover{
+    border: 1px solid #666666;
+}
+
+.mceEditor table.mceLayout{
+    -moz-border-radius: 3px 3px 3px 3px !important;
+    border: 1px solid #BBBBBB !important; 
+    display:block !important;;
+    height: auto !important;
+}
+.mceEditor table.mceLayout:hover{
+    border: 1px solid #666666 !important;
+}
+.mceEditor iframe{
+    width: 104% !important;
+}
+
 .labeled {
     color: darkgray;
 }
