--- a/www/css/main.css
+++ b/www/css/main.css
@@ -77,7 +77,7 @@ body{
 #left_layout{
     float:left;
     width: 20%;
-    padding: 5px;
+    padding: 0.5em;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
@@ -87,8 +87,9 @@ body{
 
 #right_layout{
     float:right;
-    width: 77%;
-    padding: 5px;
+    width: 76%;
+    margin-left: 0.5em;
+    padding: 0.5em;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
@@ -96,9 +97,9 @@ body{
     border: 1px solid #DFDFDF;
 }
 .content{
-    width: 90%;
+/*    width: 90%;*/
     min-width: 1000px;
-    margin:0 auto;
+    margin:0 1.5em;
 }
 
 #map{
