--- a/www/css/map.css
+++ b/www/css/map.css
@@ -9,40 +9,24 @@
     height: 600px;
     float:left;
 }
-input, textarea, select {
-    font-size: small;
+
+
+.mapOverLay input{
+    font-size: 9.3pt;
     font-weight: bold;
 }
-
-
-/*hernya kakaya to*/
-a.dashed:visited {
-    color:#0053E4;
-}
-a.dashed:link, a.dashed:active, a.dashed:visited, a.dashed:hover {
-    border-bottom:1px dashed #0053E4;
-    text-decoration:none;
-}
-
-a.editItem:visited {
-    color:#0053E4;
-}
-a.editItem:link, a.editItem:active, a.editItem:visited {
+.mapOverLay a:link, .mapOverLay a:active, .mapOverLay a:visited{
+    color:white;
     border:0px;
     background-color:black;
     text-decoration:none;
     margin-left:5px;
 }
-a.editItem:hover {
+.mapOverLay a:hover,map_footer a:hover {
     background-color:white;
+    color:#121212;
 }
-a.delItem{
-    background-color:#222222
-}
-
-
-/*peredelat nahui*/
-.mapIcon {
+.mapOverLay img{
     border:0px;
     margin-bottom:-4px;
     margin-left: 5px;
@@ -62,7 +46,7 @@ a.delItem{
 .disabled {
     opacity:0.5;
 }
-.button {
+.map_button {
     margin-left:5px;
     background: #AACD4E none repeat scroll 0 0;
     border-color:#0071F3 #003798 #003798 #0071F3;
@@ -84,8 +68,4 @@ a.delItem{
     color: white;
     overflow:auto;
     white-space: nowrap;
-}
-.bottom {
-    margin-bottom: 10px;
-    font-size:10px;
 }
