--- a/www/css/main.css
+++ b/www/css/main.css
@@ -36,7 +36,7 @@ body{
     margin:0 1.5em;
 }
 
-
+/*tab panel*/
 .tabPanel{
     height: 2.6em;
     margin-bottom: 1.2em;
@@ -85,4 +85,12 @@ body{
     border-color: #BBBBBB #BBBBBB #FFFFFF;
     border-style: solid;
     border-width: 1px;
+}
+
+/*meta*/
+.meta{
+    
+}
+.meta div{
+    display: inline-block;
 }
