--- a/www/css/form.css
+++ b/www/css/form.css
@@ -18,7 +18,7 @@ div.form_footer{
 }
 
 /*nice view*/
-#right_layout input,textarea {
+#right_layout form input,#right_layout textarea,#right_layout select {
     -moz-border-radius: 3px 3px 3px 3px;
     -webkit-border-radius:3px 3px 3px 3px;
     border-radius:3px 3px 3px 3px;
@@ -29,6 +29,9 @@ div.form_footer{
     min-width: 300px;
     padding: 5px 7px;
 }
+#right_layout select {
+    min-width: 315px;
+}
 #right_layout textarea {
     /*    min-width: 500px;
         min-height: 300px;*/
@@ -36,10 +39,10 @@ div.form_footer{
 #right_layout input[type=checkbox]{
     min-width: 0px;
 }
-#right_layout input:focus{
+#right_layout select:focus,right_layout input:focus{
     background-color: #FEFAE2
 }
-#right_layout input:hover,.mceEditor table.mceLayout:hover{
+#right_layout select:hover,#right_layout input:hover,.mceEditor table.mceLayout:hover{
     border: 1px solid #666666 !important;
 }
 .mceEditor table.mceLayout{
