--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -1,3 +1,31 @@
+.userpic{
+    position: relative;
+    display: inline-block;
+}
+.userpic b.s32{
+    background: url("/images/common/backgrounds/bg_avatar_mask_32.gif") no-repeat scroll 0 0 transparent;
+    height: 32px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 32px;
+}
+.userpic b.s48{
+    background: url("/images/common/backgrounds/bg_avatar_mask_48.gif") no-repeat scroll 0 0 transparent;
+    height: 48px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 48px;
+}
+.userpic b.s24{
+    background: url("/images/common/backgrounds/bg_avatar_mask_24.gif") no-repeat scroll 0 0 transparent;
+    height: 24px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 24px;
+}
 .profile .personal {
 }
 .profile .personal .userpic{
