--- a/www/css/main.css
+++ b/www/css/main.css
@@ -61,8 +61,10 @@ body{
     white-space: nowrap;
 }
 .tabPanel ul li span{
-    -moz-border-radius-topleft: 0.3em;
-    -moz-border-radius-topright: 0.3em;
+    -moz-border-radius: 0.3em 0.3em  0 0;
+    -webkit-border-radius: 0.3em 0.3em  0 0;
+    border-radius:0.3em 0.3em  0 0;
+    
     background-color: #EEEEEE;
     border-color: #CCCCCC #CCCCCC #BBBBBB;
     border-style: solid;
